# YoutubeStreamExtractor

./: .replit  app.py  main.py  pyproject.toml
attached_assets/: Pasted--error-error-in-egg-base-option-src-does-not-exist-o-1745913831902.txt  arukan.py
src/youtube_stream_api/: app.py  main.py
src/youtube_stream_api/static/: style.css
templates/: index.html
youtube_stream_api/: __init__.py  app.py
youtube_stream_api/static/: style.css
